# RealDoor-HackNation-Project

./: .gitignore  AGENTS.md  ARCHITECTURE_AND_RISK.md  DEMO_PLAN.md  PLAN.md  PRODUCT.md  PROGRESS.md  README.md  app.py  production_app.py  pyproject.toml  vercel.json
api/: index.py
public/: app.js  index.html  styles.css
realdoor/: __init__.py  api.py  extraction.py  judge_api.py  production.py  service.py
scripts/: evaluate.py  render_judge_previews.py  render_web_previews.py  smoke_judge_demo.py
tests/: browser_ocr.test.mjs  test_judge_api.py  test_production_service.py  test_realdoor_service.py
web/: app.js  browser-ocr.js  index.html  styles.css
web/v1/: app.css  app.js  index.html
