[project]
name = "realdoor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "openai>=2.46.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]

[tool.vercel]
entrypoint = "realdoor.judge_api:app"
